Fix lobby chat size being too small in height for no reason

--- a/src/routes/game/components/elements/chatBox/ChatBox.module.css
+++ b/src/routes/game/components/elements/chatBox/ChatBox.module.css
@@ -76,7 +76,7 @@
   line-height: 1.3;
   position: relative;
   overflow: clip;
-  flex: 0 1 100%;
+  flex: 1 1 auto;
   margin-top: 0.2em;
   margin-bottom: 0.2em;
   outline: 2px solid black;
